@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.568 2006/01/07 17:39:16 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.569 2006/01/07 22:59:06 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
@@ -14,6 +14,8 @@
   in the chroot
   src/GLIUtility.py:
   fail immediately in validate_uri() if provided URI can't be parsed
+  src/templates/x86ArchitectureTemplate.py:
+  basic subprogress reporting for partitioning
 
   6 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIUtility.py:
